# 0-shell

./: .gitignore  README.md
shell/: Cargo.toml  README.md
shell/src/: command.rs  execute.rs  lib.rs  main.rs  process.rs  prompt.rs  utils.rs  zeroshellcommands.rs  zeroshellcommandserror.rs
shell/src/command/: cat.rs  cd.rs  cp.rs  echo.rs  ls.rs  mkdir.rs  mv.rs  pwd.rs  rm.rs
shell/src/zeroshellcommands/: cd.rs  exit.rs  ls.rs  pwd.rs  unknown.rs
