[package]
name = "shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "0shell"

[dependencies]
ansi_term = "0.12.1"
rustyline = "11.0.0"
chrono = "0.4.19"
users = "0.11.0"